# GD-QST

./: README.md  pyproject.toml
data_and_paper-plots/: GD-QST-PLOTS.ipynb
examples/: all_GD.ipynb
gd-qst/: __init__.py  gdchol_rank.py  gdchol_triangular.py  gdmanifold.py
gd_qst/: __init__.py  gdmanifold_adaptive.py  gdproj.py
test/: test_all_GD.ipynb  test_other_methods.ipynb
